# hyprgram

./: .cursorrules  .gitignore  AGENTS.md  BUILD.md  Cargo.toml  README.md  ROADMAP.md  WINDOWS.md  example_profile.toml
.github/workflows/: test.yml
hyprgram/: Cargo.toml
hyprgram-core/: Cargo.toml
hyprgram-core/src/: colormap.rs  dsp.rs  error.rs  lib.rs  pipewire.rs  profiles.rs  render.rs  ring.rs
hyprgram/src/: dev.rs  lib.rs  linux.rs  main.rs  spectrogram.rs
