[package]
name = "hyprgram-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ringbuf = "0.4"
realfft = "3.4"
rustfft = "6.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9"
