[package]
name = "hyprgram"
version = "0.1.0"
edition.workspace = true
license.workspace = true
default-run = "hyprgram"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hyprgram-core = { path = "../hyprgram-core" }
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }

[target.'cfg(target_os = "linux")'.dependencies]
bytemuck = { version = "1.21", features = ["derive"] }
iced = { version = "0.14", default-features = false, features = ["wgpu", "wayland", "tokio"] }
